# logfile-watcher-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  client_config.toml  config.json  server_config.toml
.github/workflows/: rust.yml
assets/: example_client_config.toml  testing1.txt  testing2.txt  testing3.txt
old/client/: events.rs  update.rs
old/client/ui/: cache.rs  mod.rs
old/common/: configs.rs  lib.rs
old/server/: main.rs
src/: buffer.rs  configs.rs  events.rs  files.rs  load.rs  main.rs  serde.rs  update.rs
src/client/: draw.rs  events.rs  main.rs  networking.rs  run.rs  update.rs
src/client/ui/: draw.rs  list.rs  mod.rs
src/common/: configs.rs  json_structs.rs  lib.rs  mod.rs
src/lib/: config.rs  lib.rs
src/server/: main.rs
src/tests/: lib_test.rs
src/ui/: draw.rs  mod.rs
src/ui/help_state/: help_block.rs  mod.rs
src/ui/main_state/: content.rs  list.rs  mod.rs  sidebar.rs  terminal.rs
src/ui/messages/: mod.rs  terminal.rs
src/ui/state/: help_state.rs  main_state.rs  mod.rs  terminal.rs
src/ui/state/components/: help_block.rs  mod.rs  terminal.rs
src/ui/state/help_state/: help_block.rs  mod.rs
src/ui/state/main_state/: mod.rs
