[package]
name = "logfile-watcher-rs"
version = "0.1.0"
authors = ["Dawid33 <dawidso6467@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.13.0"
url = { version = "2", features = ["serde"] }
rand = "0.8.3"

[target.'cfg(windows)'.dependencies]
crossterm = "0.17"
tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }

[target.'cfg(unix)'.dependencies]
tui = { version = "0.15", default-features = false, features = ['termion', 'serde'] }
termion = { version = "1.5", default-features = false}

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"