[package]
name = "watcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.12", default-features = false, features = ['crossterm','termion'] }
termion = "1.5"
crossterm = "0.17"
log = "0.4.14"
