[package]
name = "logfile-watcher-rs"
version = "0.1.0"
authors = ["Dawid33 <dawidso6467@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
log = { version = "0.4.11", features = ["std", "serde", "max_level_trace", "release_max_level_warn"] }
url = { version = "2.2.2", features = ["serde"] }
toml = "0.5.8"
chrono = { version = "0.4.19", features = ["serde"] }
simple-logging = "2.0.2"
bus = "2.2.3"
tungstenite = "0.13.0"

[target.'cfg(windows)'.dependencies]
crossterm = "0.17"
tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }

[target.'cfg(unix)'.dependencies]
tui = { version = "0.15", default-features = false, features = ['termion', 'serde'] }
termion = { version = "1.5", default-features = false}